<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL" Id="{70d29e77-3de0-4cdf-a00b-9f4f3c209eca}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT 
	MaxArraySize:INT:=999;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>